Fixed click not working on ios

--- a/style.css
+++ b/style.css
@@ -59,6 +59,10 @@ body{
     margin-left: -100%
 }    
 
+.inner_main_menu ul li:hover {
+    cursor: pointer;
+}
+
 .inner_main_menu ul li a:hover{
     color: #6FDA44;
 }  
